--- a/src/style/index.css
+++ b/src/style/index.css
@@ -29,13 +29,13 @@ header ul {
 }
 
 .article-container {
-  width: 60%;
+  width: 58%;
   margin: 20px auto;
   columns: 2;
   column-gap: 30px;
 }
 
-.article-container .article {
+.article {
   width: 100%;
   break-inside: avoid;
   margin-bottom: 30px;
@@ -45,13 +45,87 @@ header ul {
   border-color: rgb(155, 155, 155);
 }
 
-.article-container .article img {
+.article img {
   width: 100%;
   border-style: solid;
   border-width: 0;
   border-radius: 5px 5px 0 0;
 }
 
-.article-container .article .content {
+.article .content {
   margin: 5px 10px 10px 10px;
+}
+
+.left-aside {
+  float: left;
+}
+
+.left-container {
+  position: fixed;
+  margin: auto;
+  padding: 0 20px 0 20px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+}
+
+.right-aside {
+  float: right;
+}
+
+.sign-in-container {
+  position: fixed;
+  margin: auto;
+  padding: 0 20px 0 20px;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.email-password {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.email-password .email {
+  height: 35px;
+  padding: 0;
+  border-style: solid;
+  border-color: rgb(187, 187, 187);
+  border-width: 2px 2px 1px 2px;
+  border-radius: 7px 7px 0 0;
+}
+
+.email-password .password {
+  height: 35px;
+  padding: 0;
+  border-style: solid;
+  border-color: rgb(187, 187, 187);
+  border-width: 0 2px 2px 2px;
+  border-radius: 0 0 7px 7px;
+}
+
+.remember-me {
+  margin: 10px 0 20px 0;
+}
+
+.sign-in-button {
+  width: 100%;
+  background-color: rgb(56, 56, 255);
+  color: white;
+  height: 30px;
+  border-style: solid;
+  border-width: 0;
+  border-radius: 7px;
 }
